moved images into assets to maintain a clean project structure

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="banner">
       <div class="image-container">
         <img
-          src="myContributions.png"
+          src="Assets/myContributions.png"
           alt="Contribution graph"
           class="graph-image"
           id="graphImage"
